# ai_meta_heuristics

./: .gitignore  README.md  pyproject.toml
bfs/: node.py  search.py
bfs/web_crawler/: crawl.py  web_page.py
dfs/: search.py
dfs/maze_solver/: generate_maze.py  main.py  maze_exception.py  maze_location.py  maze_solver.py
