[tool.poetry]
name = "ai-meta-heuristics"
version = "0.1.0"
description = ""
authors = ["adelekap <adelejkap@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_meta_heuristics"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
